[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Pausa/Control.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Interfac grafica/menu_lateral.png" type="Texture" id=2]
[ext_resource path="res://Script/Pausa/Boton_pausa.gd" type="Script" id=3]

[node name="Node" type="Node"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Boton_pausa" type="TextureButton" parent="Control"]
margin_right = 59.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 3 )

[node name="efecto" type="Tween" parent="Control"]
pause_mode = 2

[node name="botones" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Continuar" type="Button" parent="Control/botones"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.5
margin_top = 251.0
margin_right = -101.5
margin_bottom = 309.0
text = "CONTINUAR"

[node name="Salir" type="Button" parent="Control/botones"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.5
margin_top = 323.0
margin_right = -99.5
margin_bottom = 380.0
text = "SALIR"
[connection signal="pressed" from="Control/Boton_pausa" to="Control" method="_on_Boton_pausa_pressed"]
[connection signal="pressed" from="Control/botones/Continuar" to="Control" method="_on_Continuar_pressed"]
[connection signal="pressed" from="Control/botones/Salir" to="Control" method="_on_Salir_pressed"]
